--- a/aur-repo/nuclei-qemu/PKGBUILD
+++ b/aur-repo/nuclei-qemu/PKGBUILD
@@ -9,10 +9,10 @@ arch=("x86_64")
 makedepends=()
 depends=()
 optdepends=('nucleistudioide: Nuclei Studio IDE 是基于 MCU Eclipse IDE 开发的一款针对芯来公司处理器核产品的集成开发环境工具，用于 RISC-V 开发继承了 Eclipse IDE 平台的各种优势。'
-			'jlink-software-and-documentation: Segger JLink software & documentation pack for Linux')
+	'jlink-software-and-documentation: Segger JLink software & documentation pack for Linux')
 conflicts=()
 url="https://www.nucleisys.com/download.php"
-license=('unknow')
+license=('LicenseRef-unknow')
 options=(!strip)
 
 source=("https://www.nucleisys.com/upload/files/toochain/qemu/nuclei-qemu-${pkgver}-linux-x64.tar.gz")
